--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,7 +22,7 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Chips-s_Challenge.jar
+dist.jar=${dist.dir}/Chip-s-Remake-HD-Maybe.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
